k8s/citynexus-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # Trust Cloudflare headers
      real_ip_header CF-Connecting-IP;
      real_ip_recursive on;
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Proto https;
      proxy_set_header X-Forwarded-Port 443;
      proxy_http_version 1.1;
  name: citynexus-dev
  namespace: webprod
spec:
  rules:
  - host: citynexus-dev.santaclarautah.gov
    http:
      paths:
      - backend:
          service:
            name: citynexus-dev
            port:
              number: 80
        path: /
        pathType: Prefix
